[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tiles/TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://src/UserInterface/TouchControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/LevelEnd.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Objects/Door.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/QuizUi.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Levels/TestLevelPista.gd" type="Script" id=7]
[ext_resource path="res://src/UserInterface/QuizLevelUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/Background/ParallaxBackground.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/Objects/Coin.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Objects/Heart.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Menu/ScoreMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/ui/fonts/AkayaKanadaka-Regular.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://src/Objects/Info.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Actors/Enemy.tscn" type="PackedScene" id=16]

[sub_resource type="Animation" id=2]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 896, 896 ), Vector2( 896, 384 ) ]
}

[sub_resource type="Animation" id=3]
length = 12.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 512 ), Vector2( 1152, 512 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 7
outline_color = Color( 1, 1, 1, 0.352941 )
font_data = ExtResource( 14 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 232, 496, 0, 0, 0, 0, 1080, 840, 0, 0, 0, 0, 1768, 808, 0, 0, 0, 0, 1984, 608, 0, 0, 0, 0, 2712, 104, 0, 0, 0, 0, 3688, 240, 0, 0, 0, 0, 4976, 1104, 0, 0, 0, 0, 6312, 160, 0, 0, 0, 0, 7016, 128 )
}

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 576, 704, 0, 0, 0, 0, 896, 704, 0, 0, 0, 0, 896, 704 )
}

[node name="TestLevel" type="Node2D"]
script = ExtResource( 7 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="LevelUI" parent="InterfaceLayer" instance=ExtResource( 8 )]
margin_left = 350.0
margin_top = 20.0
margin_right = -20.0

[node name="Control" parent="InterfaceLayer" instance=ExtResource( 3 )]

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 9 )]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuizUI" parent="InterfaceLayer" instance=ExtResource( 6 )]
visible = false
margin_left = 50.0
margin_top = 100.0
margin_right = -50.0
margin_bottom = -20.0

[node name="ScoreMenu" parent="InterfaceLayer" instance=ExtResource( 13 )]
visible = false

[node name="GameLayer" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="GameLayer"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 21, 0, 65541, 65536, 0, 65541, 65557, 0, 65538, 131072, 0, 65538, 131093, 0, 65538, 196608, 0, 65538, 196629, 0, 65538, 196649, 0, 0, 196650, 0, 2, 196651, 0, 262148, 196652, 0, 8, 262144, 0, 65538, 262165, 0, 65538, 262184, 0, 0, 262185, 0, 65537, 262187, 0, 131076, 262188, 0, 196608, 262189, 0, 8, 262234, 0, 65542, 262235, 0, 2, 262236, 0, 2, 262237, 0, 5, 262245, 0, 7, 262246, 0, 196612, 262247, 0, 196612, 262248, 0, 196612, 262249, 0, 196612, 262250, 0, 196612, 262251, 0, 196612, 262252, 0, 196612, 262253, 0, 196612, 262254, 0, 196612, 262255, 0, 8, 327680, 0, 65538, 327701, 0, 65538, 327719, 0, 0, 327720, 0, 65537, 327723, 0, 131076, 327724, 0, 131078, 327725, 0, 196608, 327726, 0, 196612, 327727, 0, 8, 327733, 0, 65542, 327734, 0, 2, 327735, 0, 2, 327736, 0, 2, 327737, 0, 5, 327781, 0, 131076, 327782, 0, 131078, 327783, 0, 131078, 327784, 0, 131078, 327785, 0, 131078, 327786, 0, 131072, 327787, 0, 196613, 327788, 0, 196613, 327789, 0, 196613, 327790, 0, 196613, 327791, 0, 65544, 393216, 0, 65538, 393237, 0, 65538, 393252, 0, 65542, 393253, 0, 2, 393254, 0, 2, 393255, 0, 65537, 393259, 0, 327682, 393260, 0, 196613, 393261, 0, 196613, 393262, 0, 131073, 393263, 0, 196608, 393264, 0, 8, 393316, 0, 7, 393317, 0, 196609, 393318, 0, 131072, 393319, 0, 196613, 393320, 0, 196613, 393321, 0, 196613, 393322, 0, 65544, 458752, 0, 65538, 458773, 0, 65538, 458795, 0, 65538, 458798, 0, 65543, 458799, 0, 131073, 458800, 0, 196608, 458801, 0, 8, 458852, 0, 131076, 458853, 0, 131072, 458854, 0, 65544, 524288, 0, 65538, 524291, 0, 65542, 524292, 0, 2, 524293, 0, 2, 524294, 0, 5, 524309, 0, 65538, 524321, 0, 65542, 524322, 0, 5, 524331, 0, 65538, 524335, 0, 65543, 524336, 0, 131073, 524337, 0, 196608, 524338, 0, 8, 524371, 0, 65542, 524372, 0, 2, 524373, 0, 2, 524374, 0, 2, 524375, 0, 5, 524387, 0, 7, 524388, 0, 327686, 524389, 0, 65544, 589824, 0, 65538, 589845, 0, 65538, 589849, 0, 65542, 589850, 0, 2, 589851, 0, 2, 589852, 0, 2, 589853, 0, 5, 589867, 0, 65538, 589872, 0, 65543, 589873, 0, 131073, 589874, 0, 196608, 589875, 0, 8, 589889, 0, 65542, 589890, 0, 2, 589891, 0, 5, 589922, 0, 7, 589923, 0, 196609, 589924, 0, 131077, 655360, 0, 65538, 655381, 0, 65538, 655403, 0, 65538, 655409, 0, 131076, 655410, 0, 131078, 655411, 0, 131077, 655458, 0, 131076, 655459, 0, 131078, 655460, 0, 131077, 720896, 0, 65538, 720905, 0, 65542, 720906, 0, 2, 720907, 0, 2, 720908, 0, 2, 720909, 0, 5, 720917, 0, 65538, 720939, 0, 65538, 720945, 0, 65543, 720946, 0, 131073, 720947, 0, 196608, 720948, 0, 8, 720993, 0, 7, 720994, 0, 196609, 720995, 0, 131072, 720996, 0, 65544, 786432, 0, 65538, 786434, 0, 65542, 786435, 0, 2, 786436, 0, 2, 786437, 0, 2, 786438, 0, 5, 786449, 0, 65542, 786450, 0, 2, 786451, 0, 2, 786452, 0, 2, 786453, 0, 4, 786454, 0, 2, 786455, 0, 2, 786456, 0, 2, 786457, 0, 2, 786458, 0, 2, 786459, 0, 2, 786460, 0, 5, 786475, 0, 65538, 786482, 0, 65543, 786483, 0, 131073, 786484, 0, 196608, 786485, 0, 8, 786529, 0, 131076, 786530, 0, 131072, 786531, 0, 65544, 851968, 0, 65538, 852011, 0, 65538, 852019, 0, 65543, 852020, 0, 131073, 852021, 0, 196608, 852022, 0, 8, 852039, 0, 65542, 852040, 0, 2, 852041, 0, 5, 852046, 0, 65542, 852047, 0, 2, 852048, 0, 2, 852049, 0, 2, 852050, 0, 5, 852064, 0, 7, 852065, 0, 327686, 852066, 0, 65544, 917504, 0, 65538, 917547, 0, 65538, 917556, 0, 65543, 917557, 0, 196613, 917558, 0, 262150, 917559, 0, 196612, 917560, 0, 8, 917600, 0, 131076, 917601, 0, 131077, 983040, 0, 65538, 983083, 0, 65538, 983094, 0, 65543, 983095, 0, 131073, 983096, 0, 196608, 983097, 0, 8, 983136, 0, 131076, 983137, 0, 131077, 1048576, 0, 65536, 1048577, 0, 2, 1048578, 0, 2, 1048579, 0, 2, 1048580, 0, 2, 1048581, 0, 2, 1048582, 0, 2, 1048583, 0, 2, 1048584, 0, 2, 1048585, 0, 2, 1048586, 0, 2, 1048587, 0, 2, 1048588, 0, 2, 1048589, 0, 2, 1048590, 0, 2, 1048591, 0, 2, 1048592, 0, 2, 1048593, 0, 2, 1048594, 0, 2, 1048595, 0, 2, 1048596, 0, 2, 1048597, 0, 2, 1048598, 0, 2, 1048599, 0, 2, 1048600, 0, 2, 1048601, 0, 2, 1048602, 0, 2, 1048603, 0, 2, 1048604, 0, 2, 1048605, 0, 2, 1048606, 0, 2, 1048607, 0, 2, 1048608, 0, 2, 1048609, 0, 2, 1048610, 0, 2, 1048611, 0, 2, 1048612, 0, 2, 1048613, 0, 2, 1048614, 0, 2, 1048615, 0, 2, 1048616, 0, 2, 1048617, 0, 2, 1048618, 0, 2, 1048619, 0, 65537, 1048631, 0, 65543, 1048632, 0, 131073, 1048633, 0, 196608, 1048634, 0, 8, 1048671, 0, 7, 1048672, 0, 327686, 1048673, 0, 65544, 1114168, 0, 65543, 1114169, 0, 131073, 1114170, 0, 196608, 1114171, 0, 8, 1114205, 0, 7, 1114206, 0, 196612, 1114207, 0, 196609, 1114208, 0, 131077, 1179705, 0, 65543, 1179706, 0, 131073, 1179707, 0, 196608, 1179708, 0, 8, 1179740, 0, 7, 1179741, 0, 196609, 1179742, 0, 131078, 1179743, 0, 131072, 1179744, 0, 65544, 1245242, 0, 65543, 1245243, 0, 131073, 1245244, 0, 196608, 1245245, 0, 8, 1245276, 0, 131076, 1245277, 0, 131078, 1245278, 0, 131072, 1245279, 0, 65544, 1310779, 0, 65543, 1310780, 0, 131073, 1310781, 0, 131077, 1310811, 0, 7, 1310812, 0, 196609, 1310813, 0, 131078, 1310814, 0, 131077, 1376316, 0, 65543, 1376317, 0, 262150, 1376318, 0, 196612, 1376319, 0, 8, 1376346, 0, 7, 1376347, 0, 196609, 1376348, 0, 131078, 1376349, 0, 131072, 1376350, 0, 65544, 1441853, 0, 65543, 1441854, 0, 196613, 1441855, 0, 262150, 1441856, 0, 8, 1441881, 0, 7, 1441882, 0, 196609, 1441883, 0, 131072, 1441884, 0, 196613, 1441885, 0, 65544, 1507391, 0, 65543, 1507392, 0, 262150, 1507393, 0, 8, 1507416, 0, 7, 1507417, 0, 196609, 1507418, 0, 131072, 1507419, 0, 65544, 1572928, 0, 65543, 1572929, 0, 262150, 1572930, 0, 196612, 1572931, 0, 8, 1572951, 0, 7, 1572952, 0, 196609, 1572953, 0, 131072, 1572954, 0, 65544, 1638465, 0, 131076, 1638466, 0, 131078, 1638467, 0, 196608, 1638468, 0, 196612, 1638469, 0, 196612, 1638470, 0, 196612, 1638471, 0, 196612, 1638472, 0, 196612, 1638473, 0, 196612, 1638474, 0, 196612, 1638475, 0, 196612, 1638476, 0, 196612, 1638477, 0, 196612, 1638478, 0, 196612, 1638479, 0, 196612, 1638480, 0, 196612, 1638481, 0, 196612, 1638482, 0, 196612, 1638483, 0, 196612, 1638484, 0, 196612, 1638485, 0, 196612, 1638486, 0, 196612, 1638487, 0, 196609, 1638488, 0, 131072, 1638489, 0, 65544, 1704001, 0, 65543, 1704002, 0, 196613, 1704003, 0, 131073, 1704004, 0, 131078, 1704005, 0, 131078, 1704006, 0, 131078, 1704007, 0, 131078, 1704008, 0, 131078, 1704009, 0, 131078, 1704010, 0, 131078, 1704011, 0, 131078, 1704012, 0, 131078, 1704013, 0, 131078, 1704014, 0, 131078, 1704015, 0, 131078, 1704016, 0, 131078, 1704017, 0, 131078, 1704018, 0, 131078, 1704019, 0, 131078, 1704020, 0, 131078, 1704021, 0, 131078, 1704022, 0, 131078, 1704023, 0, 131072, 1704024, 0, 65544, 1769539, 0, 65543, 1769540, 0, 196613, 1769541, 0, 196613, 1769542, 0, 196613, 1769543, 0, 196613, 1769544, 0, 196613, 1769545, 0, 196613, 1769546, 0, 196613, 1769547, 0, 196613, 1769548, 0, 196613, 1769549, 0, 196613, 1769550, 0, 196613, 1769551, 0, 196613, 1769552, 0, 196613, 1769553, 0, 196613, 1769554, 0, 196613, 1769555, 0, 196613, 1769556, 0, 196613, 1769557, 0, 196613, 1769558, 0, 196613, 1769559, 0, 65544 )
__meta__ = {
"_editor_description_": ""
}

[node name="Player" parent="GameLayer" instance=ExtResource( 1 )]
position = Vector2( 232, 496 )
z_index = 1
speed = Vector2( 800, 1800 )
gravity = 6000.0

[node name="MovingPlatforms" type="Node2D" parent="GameLayer"]

[node name="MovingPlatform" type="KinematicBody2D" parent="GameLayer/MovingPlatforms"]
position = Vector2( 896, 896 )
collision_layer = 2
collision_mask = 0
motion/sync_to_physics = true

[node name="TileMap" type="TileMap" parent="GameLayer/MovingPlatforms/MovingPlatform"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
collision_use_parent = true
collision_use_kinematic = true
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -589833, 0, 65542, -589832, 0, 2, -589831, 0, 2, -589830, 0, 2, -589829, 0, 5, -65536, 0, 65542, -65535, 0, 2, -65534, 0, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameLayer/MovingPlatforms/MovingPlatform"]
autoplay = "default"
playback_process_mode = 0
anims/default = SubResource( 2 )

[node name="MovingPlatform2" type="KinematicBody2D" parent="GameLayer/MovingPlatforms"]
position = Vector2( 608, 512 )
collision_layer = 2
motion/sync_to_physics = true

[node name="TileMap" type="TileMap" parent="GameLayer/MovingPlatforms/MovingPlatform2"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
collision_use_parent = true
collision_use_kinematic = true
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65536, 0, 65542, -65535, 0, 2, -65534, 0, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameLayer/MovingPlatforms/MovingPlatform2"]
autoplay = "default"
playback_process_mode = 0
anims/default = SubResource( 3 )

[node name="Doors" type="Node2D" parent="GameLayer"]
z_index = -1

[node name="Door1" parent="GameLayer/Doors" instance=ExtResource( 5 )]
position = Vector2( 1368, 1024 )
scale = Vector2( 0.63, 0.63 )

[node name="Door2" parent="GameLayer/Doors" instance=ExtResource( 5 )]
position = Vector2( 520, 1024 )
scale = Vector2( 0.63, 0.63 )

[node name="Door3" parent="GameLayer/Doors" instance=ExtResource( 5 )]
position = Vector2( 1720, 1024 )
scale = Vector2( 0.63, 0.63 )

[node name="Door4" parent="GameLayer/Doors" instance=ExtResource( 5 )]
position = Vector2( 1504, 768 )
scale = Vector2( 0.63, 0.63 )

[node name="Door5" parent="GameLayer/Doors" instance=ExtResource( 5 )]
position = Vector2( 2176, 512 )
scale = Vector2( 0.63, 0.63 )

[node name="Door6" parent="GameLayer/Doors" instance=ExtResource( 5 )]
position = Vector2( 2720, 192 )
scale = Vector2( 0.63, 0.63 )

[node name="Coins" type="Node2D" parent="GameLayer"]
visible = false

[node name="Coin" parent="GameLayer/Coins" instance=ExtResource( 11 )]
position = Vector2( 640, 576 )
scale = Vector2( 0.6, 0.6 )

[node name="Coin2" parent="GameLayer/Coins" instance=ExtResource( 11 )]
position = Vector2( 736, 576 )
scale = Vector2( 0.6, 0.6 )

[node name="Coin3" parent="GameLayer/Coins" instance=ExtResource( 11 )]
position = Vector2( 832, 576 )
scale = Vector2( 0.6, 0.6 )

[node name="Coin4" parent="GameLayer/Coins" instance=ExtResource( 11 )]
position = Vector2( 934.4, 576 )
scale = Vector2( 0.6, 0.6 )

[node name="Hearts" type="Node2D" parent="GameLayer"]
visible = false

[node name="Heart" parent="GameLayer/Hearts" instance=ExtResource( 12 )]
position = Vector2( 384, 448 )
scale = Vector2( 0.6, 0.6 )

[node name="Heart2" parent="GameLayer/Hearts" instance=ExtResource( 12 )]
position = Vector2( 793.6, 930 )
scale = Vector2( 0.6, 0.6 )

[node name="Heart3" parent="GameLayer/Hearts" instance=ExtResource( 12 )]
position = Vector2( 1152, 704 )
scale = Vector2( 0.6, 0.6 )

[node name="Heart4" parent="GameLayer/Hearts" instance=ExtResource( 12 )]
position = Vector2( 1280, 704 )
scale = Vector2( 0.6, 0.6 )

[node name="LevelEnd" parent="GameLayer" instance=ExtResource( 4 )]
position = Vector2( 1022, 832 )
z_index = -1
collision_layer = 2147483648

[node name="Infos" type="Node2D" parent="GameLayer"]
visible = false

[node name="Info1" parent="GameLayer/Infos" instance=ExtResource( 15 )]
position = Vector2( 710, 696.4 )

[node name="Messeges" type="Node2D" parent="GameLayer"]
visible = false

[node name="Label" type="Label" parent="GameLayer/Messeges"]
margin_left = 354.0
margin_top = 104.0
margin_right = 532.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hejgó"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logic" type="Node" parent="."]

[node name="OneSec" type="Timer" parent="Logic"]

[node name="Path2D" type="Path2D" parent="Logic"]
curve = SubResource( 5 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 10 )]

[node name="Node2D" type="Node2D" parent="."]

[node name="Dino" parent="." instance=ExtResource( 16 )]
position = Vector2( 594.025, 704 )
scale = Vector2( 0.3, 0.3 )
speed = Vector2( -100, 50 )
gravity = 6000.0

[node name="Path2D" type="Path2D" parent="Dino"]
position = Vector2( -2901.33, -2346.67 )
scale = Vector2( 3.33333, 3.33333 )
curve = SubResource( 1 )

[node name="Dino2" parent="." instance=ExtResource( 16 )]
position = Vector2( 960, 822.4 )
scale = Vector2( 0.3, 0.3 )
speed = Vector2( -100, 50 )
gravity = 6000.0

[node name="Path2D" type="Path2D" parent="Dino2"]
position = Vector2( -2901.33, -2346.67 )
scale = Vector2( 3.33333, 3.33333 )
curve = SubResource( 1 )
[connection signal="quiz_answered" from="InterfaceLayer/QuizUI" to="." method="_on_quiz_answered"]
[connection signal="body_entered" from="GameLayer/LevelEnd" to="." method="_on_LevelEnd"]
[connection signal="timeout" from="Logic/OneSec" to="." method="_on_OneSec_timeout"]
